--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
     "keyboard": true,
     "mouse": true,
     "clipboard": true,
-    "screenshots": false,
+    "screenshots": true,
     "usb_monitoring": true,
     "network_monitoring": false,
     "window_tracking": true,
