--- a/config.json
+++ b/config.json
@@ -77,7 +77,7 @@
     "email_pattern": "\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b"
   },
   "performance": {
-    "screenshot_interval": 15,
+    "screenshot_interval": 10,
     "window_check_interval": 1.0,
     "clipboard_check_interval": 1.0,
     "max_memory_usage_mb": 500,
@@ -237,7 +237,11 @@
         "insider_threat": 0.3,
         "temporal": 0.15,
         "access": 0.1
-      }
+      },
+      "baseline_window": null,
+      "drift_threshold": null,
+      "micro_batch_size": null,
+      "max_latency_ms": null
     },
     "model_manager": {
       "auto_retrain": true,
