--- a/config.json
+++ b/config.json
@@ -1,43 +1,33 @@
 {
   "logging": {
     "level": "INFO",
-    "file_path": "keylogger.log",
+    "file_path": "logs/keylog.txt",
     "max_size_mb": 100,
     "buffer_size": 100,
     "flush_interval": 5.0,
     "enable_rotation": true,
     "enable_encryption": true,
-    "backup_count": 5,
-    "log_level": "INFO"
+    "backup_count": 5
   },
   "encryption": {
     "enabled": true,
-    "key_file": "encryption.key",
-    "algorithm": "AES-256-GCM",
-    "key_rotation_days": 30,
-    "secure_delete": true
+    "key_file": "keys/encryption.key",
+    "algorithm": "AES-256-GCM"
   },
   "features": {
     "keyboard": true,
     "mouse": true,
     "clipboard": true,
-    "window_tracking": true,
     "screenshots": true,
-    "camera": false,
-    "keyboard_logging": true,
-    "mouse_logging": true,
-    "clipboard_logging": true,
-    "screenshot_capture": true,
-    "application_monitoring": true,
-    "network_monitoring": false,
-    "file_monitoring": false
+    "usb_monitoring": true,
+    "network_monitoring": true,
+    "window_tracking": true,
+    "performance_monitoring": true
   },
   "privacy": {
-    "sanitize_passwords": false,
-    "hash_sensitive_data": false,
+    "sanitize_passwords": true,
+    "hash_sensitive_data": true,
     "clipboard_max_length": 1000,
-    "max_text_length": 1000,
-    "sanitization_method": "hash",
     "excluded_applications": [
       "password_manager.exe",
       "keepass.exe",
@@ -55,167 +45,35 @@
       "cvv",
       "pin",
       "secret"
-    ],
-    "log_mouse_coordinates": false,
-    "coordinate_precision": 10,
-    "filter_passwords": true,
-    "filter_credit_cards": true,
-    "filter_social_security": true,
-    "filter_emails": false,
-    "filter_urls": false,
-    "sanitize_sensitive_data": true,
-    "password_patterns": [
-      "password",
-      "passwd",
-      "pwd",
-      "pin",
-      "secret",
-      "key"
-    ],
-    "credit_card_pattern": "\\b(?:\\d{4}[\\s-]?){3}\\d{4}\\b",
-    "ssn_pattern": "\\b\\d{3}-\\d{2}-\\d{4}\\b",
-    "email_pattern": "\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b"
+    ]
   },
   "performance": {
-    "screenshot_interval": 10,
-    "window_check_interval": 1.0,
+    "keyboard_buffer_size": 1000,
+    "mouse_buffer_size": 500,
     "clipboard_check_interval": 1.0,
-    "max_memory_usage_mb": 500,
-    "thread_pool_size": 4,
-    "text_flush_interval": 5.0,
-    "max_key_sequence": 100,
-    "typing_timeout": 2.0,
-    "mouse_move_threshold": 10,
-    "mouse_move_interval": 1.0,
-    "max_click_sequence": 50,
-    "double_click_threshold": 0.5,
-    "mouse_batch_size": 50,
-    "mouse_batch_timeout": 2.0,
-    "max_text_length": 1000,
-    "flush_interval_seconds": 10,
-    "typing_timeout_seconds": 2,
-    "memory_limit_mb": 500,
-    "cpu_limit_percent": 10,
-    "buffer_size": 1000,
-    "flush_interval": 30
-  },
-  "remote": {
-    "enabled": false,
-    "server_url": "",
-    "api_key": "",
-    "upload_interval": 3600,
-    "compress_uploads": true,
-    "upload_interval_minutes": 60,
-    "retry_attempts": 3,
-    "timeout_seconds": 30
-  },
-  "alerts": {
-    "email_enabled": false,
-    "email_smtp_server": "smtp.gmail.com",
-    "email_smtp_port": 587,
-    "email_username": "",
-    "email_password": "",
-    "email_to": "",
-    "alert_on_startup": true,
-    "alert_on_errors": true,
-    "enabled": false,
-    "email_notifications": false,
-    "telegram_notifications": false,
-    "webhook_notifications": false,
-    "alert_keywords": [
-      "confidential",
-      "secret",
-      "password",
-      "credit card"
-    ],
-    "email_config": {
-      "smtp_server": "",
-      "smtp_port": 587,
-      "username": "",
-      "password": "",
-      "to_email": ""
-    },
-    "telegram_config": {
-      "bot_token": "",
-      "chat_id": ""
-    },
-    "webhook_config": {
-      "url": "",
-      "headers": {}
-    }
-  },
-  "stealth": {
-    "hide_console": false,
-    "process_name": "system_service",
-    "startup_delay": 30,
-    "auto_start": false,
-    "run_as_service": false,
-    "process_name_disguise": "",
-    "startup_delay_seconds": 0,
-    "anti_detection": false,
-    "minimize_footprint": true
+    "screenshot_interval": 15,
+    "usb_check_interval": 5.0,
+    "window_check_interval": 1.0,
+    "performance_check_interval": 30.0
   },
   "web": {
     "enabled": true,
     "host": "127.0.0.1",
-    "port": 8080,
+    "port": 5000,
     "debug": false,
+    "secret_key": "your-secret-key-change-in-production",
     "admin_username": "admin",
-    "admin_password": "admin123",
-    "secret_key": "your-secret-key-here",
-    "auth_required": true,
-    "username": "admin",
-    "password": "admin123",
-    "ssl_enabled": false,
-    "ssl_cert_path": "",
-    "ssl_key_path": "",
-    "session_timeout_minutes": 30,
-    "auth_enabled": false
-  },
-  "camera": {
-    "enabled": false,
-    "device_index": 0,
-    "segment_seconds": 60,
-    "fps": 15,
-    "width": 640,
-    "height": 480,
-    "resolution": "640x480",
-    "format": "mp4",
-    "codec": "mp4v",
-    "grayscale": false,
-    "blur": 0,
-    "encrypt": false,
-    "storage_path": "data/camera"
-  },
-  "screenshots": {
-    "enabled": true,
-    "interval_seconds": 300,
-    "quality": 85,
-    "format": "JPEG",
-    "max_width": 1920,
-    "max_height": 1080,
-    "storage_path": "screenshots/",
-    "compress": true,
-    "encrypt": true
+    "admin_password": "admin123"
   },
   "ml": {
     "enabled": true,
-    "models_dir": "models",
     "behavioral_analytics": {
       "enabled": true,
       "sensitivity": 0.1,
       "learning_rate": 0.01,
       "baseline_window": 1000,
       "adaptation_threshold": 0.8,
-      "min_samples_for_training": 50
-    },
-    "keystroke_dynamics": {
-      "enabled": true,
-      "min_samples": 100,
-      "auth_threshold": 0.8,
-      "adaptation_rate": 0.1,
-      "window_size": 50,
-      "feature_window_size": 50
+      "model_save_interval": 3600
     },
     "insider_threat": {
       "enabled": true,
@@ -224,45 +82,25 @@
       "analysis_window": 100,
       "correlation_threshold": 0.8
     },
+    "keystroke_dynamics": {
+      "enabled": true,
+      "min_samples": 50,
+      "threshold": 0.8,
+      "learning_rate": 0.1
+    },
     "risk_scoring": {
       "enabled": true,
-      "threshold": 0.8,
-      "alert_threshold": 0.9,
-      "decay_rate": 0.95,
-      "window_size": 100,
-      "update_interval": 10,
       "weights": {
-        "behavioral": 0.25,
+        "behavioral": 0.4,
+        "threat": 0.3,
         "keystroke": 0.2,
-        "insider_threat": 0.3,
-        "temporal": 0.15,
-        "access": 0.1
-      },
-      "baseline_window": null,
-      "drift_threshold": null,
-      "micro_batch_size": null,
-      "max_latency_ms": null
+        "context": 0.1
+      }
     },
-    "model_manager": {
-      "auto_retrain": true,
-      "retrain_interval": 3600,
-      "min_samples_retrain": 100,
-      "validation": true,
-      "hyperparameter_tuning": false
-    },
-    "preprocessing": {
-      "window_size": 100,
-      "cache_size": 1000,
-      "feature_scaling": true,
-      "dimensionality_reduction": false
+    "interpretability": {
+      "enabled": true,
+      "explanation_depth": "detailed",
+      "visualization_enabled": true
     }
-  },
-  "system": {
-    "auto_start": false,
-    "check_updates": false,
-    "telemetry": false,
-    "debug_mode": false,
-    "log_system_events": true,
-    "monitor_system_changes": false
   }
 }
