--- a/config.json
+++ b/config.json
@@ -163,5 +163,341 @@
       "explanation_depth": "detailed",
       "visualization_enabled": true
     }
+  },
+  "behavioral_analytics": {
+    "enabled": true,
+    "real_time_analysis": true,
+    "auto_response_enabled": true,
+    "alert_threshold": "medium",
+    "data_retention_days": 90,
+    "advanced_ml": {
+      "enabled": true,
+      "deep_learning_models": {
+        "lstm_behavioral": {
+          "enabled": true,
+          "sequence_length": 50,
+          "embedding_dim": 128,
+          "hidden_units": [128, 64, 32],
+          "dropout_rate": 0.2,
+          "learning_rate": 0.001,
+          "batch_size": 32,
+          "epochs": 50,
+          "early_stopping_patience": 10
+        },
+        "autoencoder": {
+          "enabled": true,
+          "encoding_dim": 16,
+          "hidden_units": [128, 64, 32],
+          "dropout_rate": 0.2,
+          "learning_rate": 0.001,
+          "batch_size": 32,
+          "epochs": 100
+        },
+        "transformer": {
+          "enabled": true,
+          "sequence_length": 50,
+          "embedding_dim": 128,
+          "num_heads": 8,
+          "num_layers": 2,
+          "dropout_rate": 0.1,
+          "learning_rate": 0.001,
+          "batch_size": 32,
+          "epochs": 50
+        },
+        "defensive_gan": {
+          "enabled": true,
+          "generator_hidden_units": [128, 256],
+          "discriminator_hidden_units": [256, 128],
+          "learning_rate": 0.001,
+          "batch_size": 32,
+          "epochs": 100
+        }
+      },
+      "traditional_ml_models": {
+        "isolation_forest": {
+          "enabled": true,
+          "contamination": 0.05,
+          "n_estimators": 200,
+          "max_samples": "auto",
+          "random_state": 42
+        },
+        "one_class_svm": {
+          "enabled": true,
+          "kernel": "rbf",
+          "nu": 0.05,
+          "gamma": "scale"
+        },
+        "hdbscan": {
+          "enabled": true,
+          "min_cluster_size": 10,
+          "min_samples": 5,
+          "metric": "euclidean"
+        },
+        "optics": {
+          "enabled": true,
+          "min_samples": 5,
+          "xi": 0.05,
+          "min_cluster_size": 0.1
+        },
+        "random_forest": {
+          "enabled": true,
+          "n_estimators": 200,
+          "max_depth": 20,
+          "class_weight": "balanced",
+          "random_state": 42
+        },
+        "mlp_classifier": {
+          "enabled": true,
+          "hidden_layer_sizes": [128, 64, 32],
+          "activation": "relu",
+          "solver": "adam",
+          "alpha": 0.001,
+          "max_iter": 1000,
+          "random_state": 42
+        }
+      },
+      "ensemble_methods": {
+        "voting_classifier": {
+          "enabled": true,
+          "voting": "soft",
+          "estimators": ["random_forest", "mlp_classifier"]
+        },
+        "anomaly_ensemble": {
+          "enabled": true,
+          "combination_method": "weighted_average",
+          "model_weights": {
+            "lstm_behavioral": 0.3,
+            "isolation_forest": 0.2,
+            "one_class_svm": 0.2,
+            "autoencoder": 0.3
+          }
+        }
+      }
+    },
+    "feature_engineering": {
+      "statistical_features": {
+        "enabled": true,
+        "features": ["mean", "std", "variance", "skewness", "kurtosis", "percentiles"]
+      },
+      "temporal_features": {
+        "enabled": true,
+        "features": ["hour_distribution", "day_distribution", "session_duration", "activity_frequency"]
+      },
+      "frequency_features": {
+        "enabled": true,
+        "features": ["dominant_frequency", "spectral_centroid", "spectral_rolloff", "power_spectral_density"]
+      },
+      "contextual_features": {
+        "enabled": true,
+        "features": ["application_diversity", "device_context", "network_context", "geolocation"]
+      },
+      "behavioral_sequences": {
+        "enabled": true,
+        "sequence_length": 100,
+        "ngram_range": [1, 3],
+        "min_frequency": 2
+      }
+    },
+    "anomaly_detection": {
+      "sensitivity": 0.05,
+      "confidence_threshold": 0.7,
+      "risk_score_threshold": 0.6,
+      "drift_threshold": 0.15,
+      "adaptation_threshold": 0.85,
+      "baseline_window": 2000,
+      "multi_model_approach": {
+        "enabled": true,
+        "model_consensus_threshold": 0.6,
+        "disagreement_handling": "weighted_average"
+      },
+      "cross_platform_correlation": {
+        "enabled": true,
+        "correlation_window": 3600,
+        "location_change_threshold": 1000,
+        "device_switch_threshold": 2
+      },
+      "adversarial_defense": {
+        "enabled": true,
+        "perturbation_detection": true,
+        "model_integrity_checking": true,
+        "adversarial_training": true,
+        "differential_privacy": true,
+        "epsilon": 1.0,
+        "delta": 1e-05
+      }
+    },
+    "security_response": {
+      "auto_response_enabled": true,
+      "response_delay_seconds": 5,
+      "escalation_enabled": true,
+      "threat_level_actions": {
+        "low": ["log_alert", "update_user_profile"],
+        "medium": ["log_alert", "notify_admin", "enhanced_monitoring"],
+        "high": ["log_alert", "notify_admin", "isolate_user", "preserve_evidence", "require_mfa"],
+        "critical": ["log_alert", "notify_admin", "isolate_user", "block_action", "preserve_evidence", "emergency_response"]
+      },
+      "anomaly_type_actions": {
+        "account_takeover": ["require_mfa", "notify_admin", "force_password_reset", "review_account_privileges"],
+        "insider_threat": ["isolate_user", "preserve_evidence", "review_data_access", "audit_user_activity"],
+        "cross_platform_anomaly": ["require_mfa", "notify_admin", "verify_device_trust", "check_network_location"],
+        "adversarial_attack": ["block_action", "preserve_evidence", "increase_security_level", "analyze_attack_vector"]
+      },
+      "auto_response_conditions": {
+        "consecutive_anomalies": 3,
+        "confidence_threshold": 0.8,
+        "risk_score_threshold": 0.7,
+        "time_window_seconds": 3600
+      }
+    },
+    "user_profiles": {
+      "profile_creation_threshold": 10,
+      "profile_update_frequency": 100,
+      "profile_decay_days": 30,
+      "anonymization_enabled": true,
+      "baseline_estimation": {
+        "window_size": 1000,
+        "outlier_removal": true,
+        "confidence_interval": 0.95,
+        "minimum_samples": 100
+      },
+      "adaptation_mechanisms": {
+        "enabled": true,
+        "learning_rate": 0.01,
+        "drift_detection": true,
+        "concept_drift_threshold": 0.15,
+        "model_retraining_trigger": 0.8
+      }
+    },
+    "privacy": {
+      "data_anonymization": true,
+      "differential_privacy": true,
+      "data_minimization": true,
+      "retention_policy": "90_days",
+      "gdpr_compliance": {
+        "enabled": true,
+        "data_portability": true,
+        "right_to_erasure": true,
+        "consent_management": true
+      },
+      "encryption": {
+        "enabled": true,
+        "algorithm": "AES-256-GCM",
+        "key_rotation_days": 30,
+        "secure_key_storage": true
+      }
+    },
+    "performance": {
+      "batch_processing": {
+        "enabled": true,
+        "batch_size": 100,
+        "processing_interval": 60
+      },
+      "real_time_processing": {
+        "enabled": true,
+        "max_latency_ms": 500,
+        "parallel_processing": true,
+        "thread_pool_size": 4
+      },
+      "memory_management": {
+        "max_memory_usage_mb": 1024,
+        "garbage_collection_interval": 300,
+        "data_compression": true
+      },
+      "caching": {
+        "enabled": true,
+        "cache_size": 1000,
+        "cache_ttl": 3600,
+        "cache_eviction_policy": "LRU"
+      }
+    },
+    "monitoring": {
+      "health_checks": {
+        "enabled": true,
+        "check_interval": 60,
+        "failure_threshold": 3
+      },
+      "performance_metrics": {
+        "enabled": true,
+        "metrics_collection_interval": 30,
+        "metrics_retention_days": 30
+      },
+      "alerting": {
+        "enabled": true,
+        "alert_channels": ["log", "email", "webhook"],
+        "alert_thresholds": {
+          "model_accuracy": 0.7,
+          "false_positive_rate": 0.1,
+          "system_health": "degraded",
+          "memory_usage": 0.8
+        }
+      },
+      "dashboard": {
+        "enabled": true,
+        "update_interval": 10,
+        "historical_data_days": 30,
+        "real_time_charts": true
+      }
+    },
+    "integration": {
+      "keylogger_system": {
+        "enabled": true,
+        "event_types": ["keyboard", "mouse", "clipboard", "window", "screenshot"],
+        "data_enrichment": true,
+        "real_time_streaming": true
+      },
+      "web_dashboard": {
+        "enabled": true,
+        "api_endpoints": true,
+        "websocket_support": true,
+        "authentication_required": true,
+        "role_based_access": true
+      },
+      "external_apis": {
+        "threat_intelligence": {
+          "enabled": true,
+          "providers": ["virustotal", "abuse_ch", "misp"],
+          "api_key_required": true,
+          "query_interval": 3600
+        },
+        "geolocation": {
+          "enabled": true,
+          "providers": ["ipapi", "ipgeolocation"],
+          "api_key_required": true
+        },
+        "notification": {
+          "enabled": true,
+          "providers": ["email", "slack", "teams"],
+          "api_key_required": true
+        }
+      }
+    },
+    "research": {
+      "experiment_tracking": {
+        "enabled": true,
+        "mlflow_integration": true,
+        "experiment_name": "behavioral_analytics_research",
+        "hyperparameter_tuning": true
+      },
+      "model_validation": {
+        "cross_validation": true,
+        "k_folds": 5,
+        "stratified_sampling": true,
+        "statistical_tests": ["t_test", "chi_square", "mann_whitney"]
+      },
+      "explainable_ai": {
+        "enabled": true,
+        "shap_analysis": true,
+        "lime_explanations": true,
+        "feature_importance": true,
+        "model_interpretability": true
+      },
+      "adversarial_research": {
+        "enabled": true,
+        "attack_simulation": true,
+        "robustness_testing": true,
+        "defense_mechanisms": true,
+        "privacy_preserving_ml": true
+      }
+    }
   }
 }
